--- a/openerp/templates/default/ngnix-openerp.conf.erb
+++ b/openerp/templates/default/ngnix-openerp.conf.erb
@@ -5,11 +5,33 @@ upstream app_server {
 }
 
 server {
-	listen 80 default;
+	    listen 80 default;
+	    return 301 https://$host$request_uri;
+}
+
+
+server {
+	listen 443 ssl;
 	client_max_body_size 10G;
 	server_name <%=node[:openerp][:servername]%>;
 
-	keepalive_timeout 5;
+	ssl_certificate <%=node[:openerp][:ssl_public]%>;
+	ssl on;
+	ssl_certificate_key <%=node[:openerp][:ssl_private]%>;
+	
+	
+	keepalive_timeout 3600;
+
+    # increase proxy timeouts to prevent 504 Gateway Time-Out
+    proxy_connect_timeout       3600;
+    proxy_send_timeout          3600;
+    proxy_read_timeout          3600;
+    send_timeout                3600;
+    
+    # increase proxy buffer to handle some OpenERP web requests
+    proxy_buffers 16 64k;
+    proxy_buffer_size 128k;
+	
 
 	# path for static files
 	root <%=node[:openerp][:static_http_document_root]%>;
@@ -34,4 +56,3 @@ server {
 	}
 
 }
-
