correcting the name for addons_path

--- a/openerp/templates/default/openerp.conf.erb
+++ b/openerp/templates/default/openerp.conf.erb
@@ -1,5 +1,5 @@
 [options] <%=node[:openerp][:user]%>
-addons_path = <%=node[:openerp][:addon_path]%>
+addons_path = <%=node[:openerp][:addons_path]%>
 admin_passwd = <%=node[:openerp][:admin_pass]%>
 auto_reload = False
 csv_internal_sep = ,
