--- a/openerp/templates/default/nginx-openerp.conf.erb
+++ b/openerp/templates/default/nginx-openerp.conf.erb
@@ -12,11 +12,12 @@ server {
 }
 
 server {
-	listen 80 default;
-	client_max_body_size 100m;
-	server_name <%=node[:openerp][:servername]%>;
+	listen 			   80 default;
+	charset                    utf-8;
+	client_max_body_size       100m;
+	server_name                <%=node[:openerp][:servername]%>;
 
-	keepalive_timeout 5;
+	keepalive_timeout          65;
 
 	#access_log                 /var/log/odoo/nginx-access.log;
   	#error_log                  /var/log/odoo/nginx-error.log;
@@ -37,10 +38,29 @@ server {
 	# by default, do not forward anything
          proxy_redirect             off;
 
-         gzip                       on;
-         gzip_min_length            1100;
-         gzip_buffers               4 32k;
-         gzip_types                 text/plain application/x-javascript text/xml text/css;
+
+	gzip                       on;
+        gzip_http_version          1.1;
+        gzip_comp_level            6;
+        gzip_min_length            1100;
+        gzip_proxied               any;
+        gzip_buffers               4 32k;
+        gzip_types
+				    application/atom+xml
+				    application/javascript
+				    application/json
+				    application/rss+xml
+				    application/vnd.ms-fontobject
+				    application/x-font-ttf
+				    application/x-web-app-manifest+json
+				    application/xhtml+xml
+				    application/xml
+				    font/opentype
+				    image/svg+xml
+				    image/x-icon
+				    text/css
+				    text/plain
+				    text/x-component;
          gzip_vary                  on;
   
 	location / {
