--- a/openerp/templates/default/nginx-openerp.conf.erb
+++ b/openerp/templates/default/nginx-openerp.conf.erb
@@ -37,7 +37,7 @@ server {
   # listen [::]:443 ssl spdy deferred;  # for Linux
   # listen 443 ssl spdy deferred;  # for Linux
   listen [::]:443 ssl spdy;
-  listen 443 ssl spdy;ht
+  listen 443 ssl spdy;
 
   # The host name to respond to
   server_name <%=node[:openerp][:servername]%>;
