--- a/openerp/templates/default/sumologic_sources.erb
+++ b/openerp/templates/default/sumologic_sources.erb
@@ -35,7 +35,7 @@
             "pathExpression": "/etc/nginx/logs/*.log"
         },
          {
-            "name": "Nginx",
+            "name": "Nginx-ALT",
             "sourceType": "LocalFile",
             "automaticDateParsing": true,
             "multilineProcessingEnabled": false,
