--- a/openerp/templates/default/nginx-openerp.conf.erb
+++ b/openerp/templates/default/nginx-openerp.conf.erb
@@ -54,6 +54,8 @@ location = /500.html {
 location ~* /web/database/manager {
         auth_basic "Restricted Area Login";
         auth_basic_user_file /etc/nginx/.htpasswd;
+proxy_pass               http://127.0.0.1:8069;
+
     }
 
   # Include the basic h5bp config set
