include ssl_stapling

--- a/openerp/templates/default/nginx-openerp.conf.erb
+++ b/openerp/templates/default/nginx-openerp.conf.erb
@@ -64,6 +64,9 @@ proxy_pass               http://127.0.0.1:8069;
   # Include the spdy h5bp config set
   include h5bp/directive-only/spdy.conf;
 
+  # include stappling
+  include h5bp/directive-only/ssl_stapling.conf;
+
   # Include the spdy h5bp config set
   include h5bp/directive-only/cache-file-descriptors.conf;
 }
