--- a/openerp/templates/default/nginx-openerp.conf.erb
+++ b/openerp/templates/default/nginx-openerp.conf.erb
@@ -42,7 +42,10 @@ server {
   if ($host = 'www.saas.sl' ) {
           rewrite  ^/(.*)$  https://saas.sl/$1  permanent;
 }
-
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header X-Forwarded-Proto $scheme;
    location / {
      
      include proxy_params;
@@ -69,6 +72,7 @@ location = /500.html {
 location ~* /web/database/manager {
         auth_basic "Restricted Area Login";
         auth_basic_user_file /etc/nginx/.htpasswd;
+include proxy_params;
 proxy_pass               http://127.0.0.1:8069;
 
     }
