--- a/openerp/templates/default/nginx-openerp.conf.erb
+++ b/openerp/templates/default/nginx-openerp.conf.erb
@@ -35,7 +35,7 @@ server {
   # listen 443 ssl spdy deferred;  # for Linux
   listen [::]:443 ssl spdy;
   listen 443 ssl spdy;
-
+  client_max_body_size 20M;
   # The host name to respond to
   server_name *.<%=node[:openerp][:servername]%>;
 
