changing sentry addon

--- a/openerp/templates/default/openerp.conf.erb
+++ b/openerp/templates/default/openerp.conf.erb
@@ -61,6 +61,10 @@ xmlrpcs = True
 xmlrpcs_interface = 
 xmlrpcs_port = 8071
 sentry_dsn = <%=node[:openerp][:sentry_dsn]%>
+sentry_client_dsn = <%=node[:openerp][:sentry_client_dsn]%>
+sentry_enable_logging = <%=node[:openerp][:sentry_enable_logging]%>
+sentry_include_context = <%=node[:openerp][:sentry_include_context]%>
+sentry_logging_level = <%=node[:openerp][:sentry_logging_level]%>
 aws_access_key = <%=node[:openerp][:aws_access_key]%>
 aws_secret_key = <%=node[:openerp][:aws_secret_key]%>
 aws_s3_bucket  = <%=node[:openerp][:aws_s3_bucket]%>
