make max_cron_thread configurable via chef

--- a/openerp/templates/default/openerp.conf.erb
+++ b/openerp/templates/default/openerp.conf.erb
@@ -26,7 +26,7 @@ log_level = <%=node[:openerp][:log_level]%>
 logfile = <%=@log_file %>
 logrotate = True
 longpolling_port = 8072
-max_cron_threads = 5
+max_cron_threads = <%=node[:openerp][:max_cron_threads]%>
 osv_memory_age_limit = 1.0
 osv_memory_count_limit = False
 pg_path = None
