--- a/templates/default/openerp.conf.erb
+++ b/templates/default/openerp.conf.erb
@@ -53,7 +53,7 @@ timezone = False
 translate_modules = ['all']
 unaccent = False
 without_demo = False
-workers = <%=node[:openerp][:workers]%>
+workers = <%=@workers %>
 xmlrpc = True
 xmlrpc_interface = 
 xmlrpc_port = 8069
