--- a/templates/default/openerp.conf.erb
+++ b/templates/default/openerp.conf.erb
@@ -1,6 +1,6 @@
 [options] <%=@openerp[:user]%>
 addons_path = <%=@openerp[:addons_path]%>
-admin_passwd = <%=@openerp[:admin_pass]%>
+admin_passwd = <%=@openerp[:admin_passwd]%>
 auto_reload = False
 csv_internal_sep = ,
 data_dir = <%=@openerp[:data_dir]%>
