--- a/templates/default/nginx-openerp.conf.erb
+++ b/templates/default/nginx-openerp.conf.erb
@@ -1,19 +1,6 @@
 proxy_cache_path /tmp/nginx levels=1:2 keys_zone=my_zone:10m inactive=360m;
 proxy_cache_key "$scheme$request_method$host$request_uri";
 
-# Choose between www and non-www, listen on the *wrong* one and redirect to
-# the right one -- http://wiki.nginx.org/Pitfalls#Server_Name
-#
-server {
-  listen [::]:80;
-  listen 80;
-
-  # listen on both hosts
-  server_name www.saas.sl;
-
-  # and redirect to non www host (declared below)
-  return 301 https://saas.sl$request_uri;
-}
 
 server {
   listen [::]:80;
@@ -22,42 +9,37 @@ server {
   # listen on both hosts
   server_name <%=@public_ip %> *.<%=node[:openerp][:servername]%>;
 
-  # and redirect to the https host (declared below)
-  # avoiding http://www -> https://www -> https:// chain.
-  return 301 https://$host$request_uri$is_args$args;
+  rewrite ^(.*) https://$host$1 permanent;
 }
 
 server {
 
-  # listen [::]:443 ssl spdy accept_filter=dataready;  # for FreeBSD
-  # listen 443 ssl spdy accept_filter=dataready;  # for FreeBSD
-  # listen [::]:443 ssl spdy deferred;  # for Linux
-  # listen 443 ssl spdy deferred;  # for Linux
   listen [::]:443 ssl spdy;
   listen 443 ssl spdy;
-  client_max_body_size 20M;
+  client_max_body_size 100M;
   # The host name to respond to
   server_name *.<%=node[:openerp][:servername]%>;
 
-  if ($host = 'www.saas.sl' ) {
-          rewrite  ^/(.*)$  https://saas.sl/$1  permanent;
-}
-proxy_connect_timeout       300;
-proxy_send_timeout          300;
-proxy_read_timeout          300;
-send_timeout                300;
-proxy_set_header Host $host;
-proxy_set_header X-Real-IP $remote_addr;
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header X-Forwarded-Proto $scheme;
+
+  proxy_connect_timeout       720s;
+  proxy_send_timeout          720s;
+  proxy_read_timeout          720s;
+  send_timeout                720s;
+
+  # Add Headers for odoo proxy mode
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
+   
+
    location / {
      
-     include proxy_params;
+     proxy_redirect off;
      proxy_pass               http://127.0.0.1:8069;
    }
 
    location /longpolling {
-      include proxy_params;
       proxy_pass              http://127.0.0.1:8072;
    }
 
