--- a/templates/default/nginx-openerp.conf.erb
+++ b/templates/default/nginx-openerp.conf.erb
@@ -33,7 +33,7 @@ server {
   listen 443 ssl http2;
 
   # The host name to respond to
-  server_name *.<%=node[:openerp][:servername]%>;;
+  server_name *.<%=node[:openerp][:servername]%>;
 
   include h5bp/directive-only/ssl.conf;
 
@@ -71,7 +71,6 @@ server {
   location ~* /web/database/manager {
     auth_basic "Restricted Area Login";
     auth_basic_user_file /etc/nginx/.htpasswd;
-    include proxy_params;
     proxy_pass  http://127.0.0.1:8069;
 
   }
@@ -80,11 +79,11 @@ server {
   include h5bp/basic.conf;
 
   # Include the spdy h5bp config set
-  include h5bp/directive-only/spdy.conf;
+  # include h5bp/directive-only/spdy.conf;
 
   # include stappling
-  include h5bp/directive-only/ssl-stapling.conf;
+  # include h5bp/directive-only/ssl-stapling.conf;
 
   # Include the spdy h5bp config set
-  include h5bp/directive-only/cache-file-descriptors.conf;
+  # include h5bp/directive-only/cache-file-descriptors.conf;
 }
