--- a/templates/default/nginx-openerp.conf.erb
+++ b/templates/default/nginx-openerp.conf.erb
@@ -35,8 +35,6 @@ server {
   # The host name to respond to
   server_name *.<%=node[:openerp][:servername]%>;
 
-  include h5bp/directive-only/ssl.conf;
-
   proxy_connect_timeout       720s;
   proxy_send_timeout          720s;
   proxy_read_timeout          720s;
@@ -47,6 +45,27 @@ server {
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
+
+  # SSL parameter
+  ssl on;
+  ssl_protocols              TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers                ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:ECDHE-RSA-DES-CBC3-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA;
+  ssl_prefer_server_ciphers  on;
+  ssl_session_cache    shared:SSL:10m; # a 1mb cache can hold about 4000 sessions, so we can hold 40000 sessions
+  ssl_session_timeout  24h;
+  keepalive_timeout 300s; # up from 75 secs default
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload;" always;
+  ssl_certificate      /etc/nginx/default_ssl.crt;
+  ssl_certificate_key  /etc/nginx/default_ssl.key;
+
+  # log
+  access_log /var/log/nginx/odoo.access.log;
+  error_log /var/log/nginx/odoo.error.log;
+
+  # common gzip
+  gzip_types text/css text/less text/plain text/xml application/xml application/json application/javascript;
+  gzip on;
+
 
   # Redirect requests to odoo backend server
   location / {
@@ -76,14 +95,38 @@ server {
   }
 
   # Include the basic h5bp config set
-  include h5bp/basic.conf;
+  add_header "X-UA-Compatible" "IE=Edge";
 
-  # Include the spdy h5bp config set
-  # include h5bp/directive-only/spdy.conf;
+  # cache.appcache, your document html and data
+  location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+    expires -1;
+  }
 
-  # include stappling
-  # include h5bp/directive-only/ssl-stapling.conf;
+  # Feed
+  location ~* \.(?:rss|atom)$ {
+    expires 1h;
+  }
 
-  # Include the spdy h5bp config set
-  # include h5bp/directive-only/cache-file-descriptors.conf;
+  # Media: images, icons, video, audio, HTC
+  location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+    expires 1M;
+    access_log off;
+    add_header Cache-Control "public";
+  }
+
+  # CSS and Javascript
+  location ~* \.(?:css|js)$ {
+    expires 1y;
+    access_log off;
+  }
+
+  location ~* /\.(?!well-known\/) {
+    deny all;
+  }
+
+  # Prevent clients from accessing to backup/config/source files
+  location ~* (?:\.(?:bak|conf|dist|fla|in[ci]|log|psd|sh|sql|sw[op])|~)$ {
+    deny all;
+  }
+
 }
