--- a/templates/default/nginx-openerp.conf.erb
+++ b/templates/default/nginx-openerp.conf.erb
@@ -80,15 +80,12 @@ server {
      proxy_pass http://odoochat;
   }
 
-  location ^~ /[\/]+/static/ {
-    # EXPERIMENTAL proxy cache
-    proxy_cache_valid 200 60m;
-    proxy_buffering on;
-    expires 864000;
-      
-    proxy_pass http://odoo;
+  location ~* /web/static/ {
+      proxy_cache_valid 200 60m;
+      proxy_buffering on;
+      expires 864000;
+      proxy_pass http://odoo;
   }
-
 
   #Specify a charset
   charset utf-8;
