--- a/templates/default/nginx-openerp.conf.erb
+++ b/templates/default/nginx-openerp.conf.erb
@@ -94,6 +94,14 @@ server {
       proxy_pass http://odoo;
   }
 
+  # some resources allowed within /web
+  location ~ ^/website/(content/|static/|image/|login|session/) {
+      proxy_cache_valid 200 60m;
+      proxy_buffering on;
+      expires 864000;
+      proxy_pass http://odoo;
+  }
+
   #Specify a charset
   charset utf-8;
 
@@ -107,7 +115,7 @@ server {
   location ~* /web/database/manager {
     auth_basic "Restricted Area Login";
     auth_basic_user_file /etc/nginx/.htpasswd;
-    proxy_pass  http://127.0.0.1:8069;
+    proxy_pass http://odoo;
 
   }
 
@@ -117,11 +125,13 @@ server {
   # cache.appcache, your document html and data
   location ~* \.(?:manifest|appcache|html?|xml|json)$ {
     expires -1;
+    proxy_pass http://odoo;
   }
 
   # Feed
   location ~* \.(?:rss|atom)$ {
     expires 1h;
+    proxy_pass http://odoo;
   }
 
   # Media: images, icons, video, audio, HTC
@@ -129,12 +139,14 @@ server {
     expires 1M;
     access_log off;
     add_header Cache-Control "public";
+    proxy_pass http://odoo;
   }
 
   # CSS and Javascript
   location ~* \.(?:css|js)$ {
     expires 1y;
     access_log off;
+    proxy_pass http://odoo;
   }
 
   location ~* /\.(?!well-known\/) {
