--- a/templates/default/openerp.conf.erb
+++ b/templates/default/openerp.conf.erb
@@ -35,7 +35,7 @@ proxy_mode = False
 reportgz = False
 secure_cert_file = server.cert
 secure_pkey_file = server.pkey
-server_wide_modules = False
+server_wide_modules = web,web_kanban
 smtp_password = False
 smtp_port = 25
 smtp_server = localhost
