--- a/templates/default/openerp.conf.erb
+++ b/templates/default/openerp.conf.erb
@@ -20,7 +20,7 @@ limit_memory_soft = <%=@openerp[:limit_memory_soft]%>
 limit_request = 8192
 limit_time_cpu = 1200
 limit_time_real = 2400
-list_db = False
+list_db = <%=@openerp[:list_db]%>
 log_handler = <%=@openerp[:log_handler]%> 
 log_level = <%=@openerp[:log_level]%> 
 logfile = <%=@log_file %>
