add redis settings

--- a/templates/default/openerp.conf.erb
+++ b/templates/default/openerp.conf.erb
@@ -71,6 +71,7 @@ aws_s3_bucket  = <%=@openerp[:aws_s3_bucket]%>
 route53_zone_id = <%=@openerp[:route53_zone_id]%>
 domain  = <%=@openerp[:domain]%>
 elastic_ip = <%=@openerp[:elastic_ip]%>
+redis_host = <%=@openerp[:redis_host]%>
 
 [options-connector]
 channels = root:4
