add node options for rest_api

--- a/templates/default/openerp.conf.erb
+++ b/templates/default/openerp.conf.erb
@@ -72,6 +72,8 @@ route53_zone_id = <%=@openerp[:route53_zone_id]%>
 domain  = <%=@openerp[:domain]%>
 elastic_ip = <%=@openerp[:elastic_ip]%>
 redis_host = <%=@openerp[:redis_host]%>
+oauth2_access_token_expires_in = <%=@openerp[:oauth2_access_token_expires_in]%>
+oauth2_refresh_token_expires_in =  <%=@openerp[:oauth2_refresh_token_expires_in]%>
 
 [options-connector]
 channels = root:4
